[package]
name = "tree-sitter-zine"
description = "Zine Is Not Emacs"
version = "0.1.0"
authors = ["Will Dey <will_dey@alumni.harvard.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zine"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/wi11dey/zine"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
